--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development"
+    "start": "webpack-dev-server --mode development",
+    "format": "prettier --write \"src/**/*.js\"",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -19,14 +21,19 @@
   },
   "homepage": "https://github.com/aishwarya-rzt/react-scratch-host#readme",
   "dependencies": {
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
+    "html-webpack-plugin": "^3.2.0",
+    "prettier": "1.18.2",
     "webpac": "^1.0.1",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4",
