--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -32,6 +33,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "1.18.2",
     "webpac": "^1.0.1",
